テスト警告残り14件を解消: deprecated API・未使用import・未使用メソッド
- S3StorageServiceTest: new URL(String) → new URI(String).toURL()
- MannschaftApplicationTests: @SuppressWarnings("resource")追加
- 未使用import/メソッド削除: TeamPageServiceTest, PerformanceExportServiceTest,
  ReservationReminderServiceTest, ServiceRecordExportServiceTest,
  ShiftRequestServiceTest, ModuleServiceTest, TodoServiceTest

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>